[package]
name = "hackercli"
version = "0.1.0"
authors = ["Rahul Padalkar <rahulnpadalkar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.127", features = ["derive"] }
tui = "0.16"
termion = "1.5"
open = "2.0.0"
chrono = "0.4"
futures = "0.3.16"